# patternhunt

./: Cargo.toml  README.md
benches/: pattern_bench.rs
src/: async_glob.rs  batch_io.rs  error.rs  lib.rs  options.rs  predicates.rs  sync.rs  windows.rs
src/patterns/: brace.rs  cache.rs  micromatch.rs  mod.rs
tests/: patterns_brace.rs
