[package]
name = "patternhunt"
version = "0.3.0"
edition = "2021"
description = "A high-performance, cross-platform glob/pattern matching library for filesystem search with advanced pattern support and metadata filtering"
readme = "README.md"
keywords = ["glob", "pattern", "matching", "filesystem", "search"]
categories = ["filesystem", "asynchronous", "algorithms", "caching", "development-tools"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xvi-xv-xii-ix-xxii-ix-xiv/patternhunt"
documentation = "https://docs.rs/patternhunt"
authors = ["<xvi-xv-xii-ix-xxii-ix-xiv <xvi.xv.xii.ix.xxii.ix.xiv@gmail.com>"]

[dependencies]
camino = "1.1.12"
globset = "0.4"
walkdir = "2"
thiserror = "1"
rayon = "1.7"
dashmap = "5"
once_cell = "1.18"

tokio = { version = "1", features = ["fs", "rt-multi-thread", "macros", "sync", "time"], optional = true }
async-stream = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
lru = "0.16.0"
regex = "1.11.2"

[dev-dependencies]
criterion = "0.4"
tempfile = "3"

[[bench]]
name = "pattern_bench"
harness = false

[features]
default = ["async"]

async = ["tokio", "async-stream", "futures"]
